# server-side-game

./: game.excalidraw  pyproject.toml
game/: __main__.py  client.py  draw_game.py  network.py  player.py
server/: __main__.py
shared/: game_state.py  map.py  models.py  state.py
